--- a/src/app/components/Productlist/Productlist.module.css
+++ b/src/app/components/Productlist/Productlist.module.css
@@ -68,9 +68,27 @@
   
   .productsGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     gap: 1.5rem;
     margin-top: 1rem;
     align-items: start;
+  }
+  
+  .filterBtnContent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+   
+  }
+  
+  @media (max-width: 768px) {
+    .sidebar {
+      display: none;
+    }
+
+    .itemsCount {
+      display: none;
+    }
   }
   
