--- a/src/app/components/FilterSidebar/FilterSidebar.module.css
+++ b/src/app/components/FilterSidebar/FilterSidebar.module.css
@@ -21,6 +21,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  
   }
   
   .filterAccordion:hover {
@@ -46,6 +47,7 @@
     align-items: center;
     margin-bottom: 0.5rem;
     cursor: pointer;
+    text-transform: capitalize;
   }
   
   .optionCheckbox {
