--- a/src/app/components/Productlist/Productlist.module.css
+++ b/src/app/components/Productlist/Productlist.module.css
@@ -82,6 +82,18 @@
    
   }
   
+  .closeBtn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 300; /* Ensure it's above the sidebar content */
+    background: none;
+    border: none;
+    font-size: 1rem;
+    color: #333;
+    cursor: pointer;
+  }
+  
   @media (max-width: 768px) {
     .sidebar {
       display: none;
