--- a/src/app/components/ProductCard/ProductCard.module.css
+++ b/src/app/components/ProductCard/ProductCard.module.css
@@ -33,6 +33,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 80%;
+    text-transform: uppercase;
   }
   
   .wishlistButton {
