--- a/src/app/components/Productlist/Productlist.module.css
+++ b/src/app/components/Productlist/Productlist.module.css
@@ -150,5 +150,6 @@
       border: none;
       text-transform: uppercase;
       border-left: 1px solid #747474;
+      background-color: white;
     }
   }
