--- a/src/app/components/Navbar/Navbar.module.css
+++ b/src/app/components/Navbar/Navbar.module.css
@@ -90,7 +90,7 @@
     }
   
     .topBar {
-      justify-content: flex-start;
+      justify-content: center;
       padding: 0.5rem 1rem;
     }
   
