--- a/src/app/components/Hero/Hero.module.css
+++ b/src/app/components/Hero/Hero.module.css
@@ -17,6 +17,7 @@
     letter-spacing: 0.05em;
     margin-bottom: 1rem;
     font-size: 2.2rem;
+    font-weight: 400;
     text-transform: uppercase;
   }
   
@@ -25,5 +26,6 @@
     line-height: 1.6;
     color: #585858;
     margin: 0 auto;
+    max-width: 600px;
   }
   
