--- a/src/app/components/FilterSidebar/FilterSidebar.module.css
+++ b/src/app/components/FilterSidebar/FilterSidebar.module.css
@@ -14,7 +14,7 @@
     width: 100%;
     text-align: left;
     border: none;
-    background: #fff;
+    background: white;
     padding: 1rem;
     cursor: pointer;
     font-weight: 600;
@@ -22,11 +22,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #ddd;
-}
-
-.filterAccordion:hover {
-    background-color: #f7f7f7;
 }
 
 /* Drop-down chevron icon */
