--- a/src/app/components/Productlist/Productlist.module.css
+++ b/src/app/components/Productlist/Productlist.module.css
@@ -153,3 +153,63 @@
       background-color: white;
     }
   }
+
+  .customDropdown {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    width: 200px; /* Set a fixed width for the dropdown */
+  }
+  
+  .selectedOption {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    border-radius: 4px;
+    width: 100%; /* Ensure it matches the dropdown width */
+    box-sizing: border-box; /* Include padding in width calculation */
+  }
+  
+  .dropdownOptions {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+    width: 100%; /* Match the width of the dropdown */
+    box-sizing: border-box; /* Include padding in width calculation */
+  }
+  
+  .customDropdown:hover .dropdownOptions {
+    display: block;
+  }
+  
+  .dropdownOption {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.5rem;
+    cursor: pointer;
+  }
+  
+  .dropdownOption:hover {
+    background-color: #f0f0f0;
+  }
+  
+  .optionImage {
+    width: 20px;
+    height: 20px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+
+  .tickIcon {
+    font-size: 1.5rem;
+  }
